# leptos_ui_kit

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.beads/: PRIME.md  config.yaml  metadata.json
.github/workflows/: transaction-platforms.yml
crates/leptos_ui_kit/: Cargo.toml
crates/leptos_ui_kit/src/: lib.rs
crates/leptos_ui_kit_cli/: Cargo.toml
crates/leptos_ui_kit_cli/src/: lib.rs  main.rs
crates/leptos_ui_kit_cli/tests/: exit_contract.rs  fixture_parity.rs  install.rs  packaged_runtime.rs  workflow.rs
crates/leptos_ui_kit_cli/tests/fixtures/homepage_trunk_csr/src/: main.rs
crates/leptos_ui_kit_cli/tests/fixtures/homepage_trunk_csr/styles/: app.css  themes.css
crates/leptos_ui_kit_cli/tests/fixtures/shared_library/src/: lib.rs
crates/leptos_ui_kit_cli/tests/fixtures/theme_pre_refactor_06124efa/: button.css
crates/leptos_ui_kit_codegen/: Cargo.toml
crates/leptos_ui_kit_codegen/src/: command.rs  digest.rs  error.rs  install_lock.rs  lib.rs  orchestration.rs  path_safety.rs  tests.rs
crates/leptos_ui_kit_codegen/src/patch/: css.rs  html.rs  mod.rs  module.rs
crates/leptos_ui_kit_codegen/src/planning/: add.rs  files.rs  init.rs  mod.rs  sync.rs
crates/leptos_ui_kit_codegen/src/transaction/: authority.rs  coordination_migration.rs  engine.rs  fs.rs  journal.rs  lock.rs  mod.rs  namespace_bootstrap.rs  namespace_lifecycle.rs  recovery.rs  recovery_capture.rs  recovery_policy.rs  replace.rs  runtime.rs  store.rs  writer.rs
crates/leptos_ui_kit_codegen/tests/: fixture_parity.rs  public_api.rs  transaction_process.rs  transaction_security.rs
crates/leptos_ui_kit_codegen_platform/: Cargo.toml
crates/leptos_ui_kit_codegen_platform/src/: lib.rs  windows.rs
crates/leptos_ui_kit_primitives/: Cargo.toml
crates/leptos_ui_kit_primitives/src/: lib.rs
crates/leptos_ui_kit_registry/: Cargo.toml  build.rs  build_assets.rs  build_provenance.rs
crates/leptos_ui_kit_registry/registry/: registry.json
crates/leptos_ui_kit_registry/registry/contracts/: component-customization-v1.json  theme-v1.json
crates/leptos_ui_kit_registry/registry/foundation/: tokens.json
crates/leptos_ui_kit_registry/registry/styles/: alert.css  anchor.css  avatar.css  badge.css  button.css  card.css  checkbox.css  collapsible.css  dialog.css  field.css  menu.css  progress.css  radio.css  separator.css  skeleton.css  spinner.css  status.css  switch.css  tabs.css  tokens.css
crates/leptos_ui_kit_registry/registry/ui/: alert.json  alert.rs  anchor.json  anchor.rs  avatar.json  avatar.rs  badge.json  badge.rs  button.json  button.rs  card.json  card.rs  checkbox.json  checkbox.rs  collapsible.json  dialog.json  field.json  identity.json  identity.rs  menu.json  progress.json  progress.rs  radio.json  radio.rs  router-link.json  router_link.rs  separator.json  separator.rs  skeleton.json  skeleton.rs  spinner.json  spinner.rs  status.json  status.rs  switch.json  switch.rs  tabs.json
crates/leptos_ui_kit_registry/registry/ui/collapsible/: content.rs  mod.rs  root.rs  trigger.rs
crates/leptos_ui_kit_registry/registry/ui/dialog/: close.rs  content.rs  description.rs  mod.rs  root.rs  title.rs  trigger.rs
crates/leptos_ui_kit_registry/registry/ui/field/: label.rs  message.rs  mod.rs  native_select.rs  required.rs  root.rs  select_field.rs  slot.rs  surface.rs  text_area.rs  text_area_field.rs  text_field.rs  text_input.rs
crates/leptos_ui_kit_registry/registry/ui/menu/: content.rs  item.rs  item_indicator.rs  mod.rs  radio_item.rs  root.rs  trigger.rs
crates/leptos_ui_kit_registry/registry/ui/tabs/: list.rs  mod.rs  panel.rs  root.rs  trigger.rs
crates/leptos_ui_kit_registry/schema/0.2.0/: theme-integration.schema.json  token-contract.schema.json
crates/leptos_ui_kit_registry/schema/0.9.0-alpha/: kit.schema.json  registry-item.schema.json  registry.schema.json  theme-contract.schema.json
crates/leptos_ui_kit_registry/src/: builtin_registry.rs  component_customization.rs  config.rs  detect.rs  embedded_assets.rs  item.rs  lib.rs  registry_health.rs  runtime_abi.rs  theme_contract.rs  token_abi.rs
crates/leptos_ui_kit_registry/tests/: asset_catalog.rs  css_color_audit.rs  dependency_boundaries.rs  package_source.rs  packaged_runtime_boundaries.rs  public_schema_parity.rs  registry_schema.rs  theme_refactor_compatibility.rs  theme_refactor_mapping.rs  web_ui_primitives_abi.rs
crates/leptos_ui_kit_registry/tests/fixtures/: theme_refactor_compatibility.json  theme_refactor_mapping.json
registry/: button.json
schema/0.9.0-alpha/: component-customization.schema.json  components.schema.json  kit.schema.json  registry-item.schema.json  registry.schema.json
tests/fixtures/homepage_trunk_csr/: Cargo.toml  index.html
tests/fixtures/homepage_trunk_csr/src/: main.rs
tests/fixtures/homepage_trunk_csr/styles/: themes.css
tests/fixtures/shared_library/: Cargo.toml
tests/fixtures/shared_library/src/components/ui/_kit/: kit.json
tests/support/: package_workspace.rs
