[workspace]
resolver = "2"
members = [
    "crates/leptos_ui_kit",
    "crates/leptos_ui_kit_cli",
    "crates/leptos_ui_kit_codegen",
    "crates/leptos_ui_kit_primitives",
    "crates/leptos_ui_kit_registry",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Tyson Lupul <tyson@radroots.org>"]
readme = "README.md"
repository = "https://github.com/triesap/leptos_ui_kit"
rust-version = "1.92.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
leptos_ui_kit_codegen = { version = "0.1.0", path = "crates/leptos_ui_kit_codegen" }
leptos_ui_kit_primitives = { version = "0.1.0", path = "crates/leptos_ui_kit_primitives" }
leptos_ui_kit_registry = { version = "0.1.0", path = "crates/leptos_ui_kit_registry" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[profile.wasm-release]
inherits = "release"
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
