[package]
name = "leptos_ui_kit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
include = ["src/lib.rs"]

[dependencies]
leptos_ui_kit_primitives.workspace = true

[lints]
workspace = true
