[package]
name = "leptos_ui_kit_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "leptos-ui"
path = "src/main.rs"

[dependencies]
leptos_ui_kit_codegen.workspace = true
leptos_ui_kit_registry.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
