[package]
name = "leptos_ui_kit_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
include = [
    "src/bin/cargo-leptos_ui_kit.rs",
    "src/lib.rs",
    "src/main.rs",
    "tests/fixtures/homepage_trunk_csr/Cargo.toml.fixture",
    "tests/fixtures/homepage_trunk_csr/index.html",
    "tests/fixtures/homepage_trunk_csr/src/main.rs",
    "tests/fixtures/homepage_trunk_csr/styles/app.css",
    "tests/fixtures/homepage_trunk_csr/styles/themes.css",
    "tests/fixtures/theme_pre_refactor_06124efa/button.css",
    "tests/fixtures/theme_pre_refactor_06124efa/spinner.css",
    "tests/workflow.rs",
]

[[bin]]
name = "leptos_ui_kit"
path = "src/main.rs"

[[bin]]
name = "cargo-leptos_ui_kit"
path = "src/bin/cargo-leptos_ui_kit.rs"

[dependencies]
leptos_ui_kit_codegen.workspace = true
leptos_ui_kit_registry.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
flate2 = "1"
sha2.workspace = true
tar = "0.4"
tempfile.workspace = true

[lints]
workspace = true
