[package]
name = "leptos_ui_kit_codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
include = [
    "src/lib.rs",
    "tests/fixtures/theme_pre_refactor_06124efa/button.css",
    "tests/fixtures/theme_pre_refactor_06124efa/spinner.css",
]

[dependencies]
leptos_ui_kit_registry.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
