[package]
name = "leptos_ui_kit_codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
include = [
    "src/command.rs",
    "src/digest.rs",
    "src/error.rs",
    "src/install_lock.rs",
    "src/lib.rs",
    "src/orchestration.rs",
    "src/patch/css.rs",
    "src/patch/html.rs",
    "src/patch/mod.rs",
    "src/patch/module.rs",
    "src/path_safety.rs",
    "src/planning/add.rs",
    "src/planning/files.rs",
    "src/planning/init.rs",
    "src/planning/mod.rs",
    "src/planning/sync.rs",
    "src/tests.rs",
    "src/transaction/engine.rs",
    "src/transaction/fs.rs",
    "src/transaction/journal.rs",
    "src/transaction/lock.rs",
    "src/transaction/mod.rs",
    "src/transaction/replace.rs",
    "src/transaction/runtime.rs",
    "src/transaction/store.rs",
    "src/transaction/writer.rs",
    "tests/fixtures/theme_pre_refactor_06124efa/button.css",
    "tests/fixtures/theme_pre_refactor_06124efa/spinner.css",
    "tests/public_api.rs",
    "tests/transaction_process.rs",
    "tests/transaction_security.rs",
]

[dependencies]
cap-fs-ext.workspace = true
cap-std.workspace = true
getrandom.workspace = true
leptos_ui_kit_registry.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[target.'cfg(any(target_vendor = "apple", target_os = "linux", target_os = "android"))'.dependencies]
rustix.workspace = true

[target.'cfg(windows)'.dependencies]
fs_at = "0.2.1"
leptos_ui_kit_codegen_platform.workspace = true
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
] }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
