[package]
name = "leptos_ui_kit_registry"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
web_ui_primitives = { git = "https://github.com/triesap/web_ui_primitives", rev = "def042b24a9a7e5f447aa1194550d561838b9b7d", features = ["leptos"] }

[lints]
workspace = true
