[package]
name = "leptos_ui_kit_registry"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
include = [
    "build.rs",
    "build_assets.rs",
    "build_provenance.rs",
    "registry/contracts/component-customization-v1.json",
    "registry/contracts/theme-v1.json",
    "registry/foundation/tokens.json",
    "registry/registry.json",
    "registry/styles/anchor.css",
    "registry/styles/button.css",
    "registry/styles/collapsible.css",
    "registry/styles/dialog.css",
    "registry/styles/field.css",
    "registry/styles/menu.css",
    "registry/styles/spinner.css",
    "registry/styles/status.css",
    "registry/styles/tabs.css",
    "registry/styles/tokens.css",
    "registry/ui/anchor.json",
    "registry/ui/anchor.rs",
    "registry/ui/button.json",
    "registry/ui/button.rs",
    "registry/ui/collapsible.json",
    "registry/ui/collapsible/content.rs",
    "registry/ui/collapsible/mod.rs",
    "registry/ui/collapsible/root.rs",
    "registry/ui/collapsible/trigger.rs",
    "registry/ui/dialog.json",
    "registry/ui/dialog/close.rs",
    "registry/ui/dialog/content.rs",
    "registry/ui/dialog/description.rs",
    "registry/ui/dialog/mod.rs",
    "registry/ui/dialog/root.rs",
    "registry/ui/dialog/title.rs",
    "registry/ui/dialog/trigger.rs",
    "registry/ui/field.json",
    "registry/ui/field/label.rs",
    "registry/ui/field/message.rs",
    "registry/ui/field/mod.rs",
    "registry/ui/field/native_select.rs",
    "registry/ui/field/required.rs",
    "registry/ui/field/root.rs",
    "registry/ui/field/select_field.rs",
    "registry/ui/field/slot.rs",
    "registry/ui/field/surface.rs",
    "registry/ui/field/text_area.rs",
    "registry/ui/field/text_area_field.rs",
    "registry/ui/field/text_field.rs",
    "registry/ui/field/text_input.rs",
    "registry/ui/identity.json",
    "registry/ui/identity.rs",
    "registry/ui/menu.json",
    "registry/ui/menu/content.rs",
    "registry/ui/menu/item.rs",
    "registry/ui/menu/item_indicator.rs",
    "registry/ui/menu/mod.rs",
    "registry/ui/menu/radio_item.rs",
    "registry/ui/menu/root.rs",
    "registry/ui/menu/trigger.rs",
    "registry/ui/router-link.json",
    "registry/ui/router_link.rs",
    "registry/ui/spinner.json",
    "registry/ui/spinner.rs",
    "registry/ui/status.json",
    "registry/ui/status.rs",
    "registry/ui/tabs.json",
    "registry/ui/tabs/list.rs",
    "registry/ui/tabs/mod.rs",
    "registry/ui/tabs/panel.rs",
    "registry/ui/tabs/root.rs",
    "registry/ui/tabs/trigger.rs",
    "schema/0.9.0-alpha/component-customization.schema.json",
    "schema/0.9.0-alpha/kit.schema.json",
    "schema/0.9.0-alpha/registry-item.schema.json",
    "schema/0.9.0-alpha/registry.schema.json",
    "schema/0.9.0-alpha/theme-contract.schema.json",
    "schema/0.2.0/theme-integration.schema.json",
    "schema/0.2.0/token-contract.schema.json",
    "src/builtin_registry.rs",
    "src/component_customization.rs",
    "src/config.rs",
    "src/detect.rs",
    "src/embedded_assets.rs",
    "src/item.rs",
    "src/lib.rs",
    "src/registry_health.rs",
    "src/theme_contract.rs",
    "src/token_abi.rs",
    "tests/asset_catalog.rs",
    "tests/fixtures/theme_refactor_compatibility.json",
    "tests/fixtures/theme_refactor_mapping.json",
    "tests/packaged_runtime_boundaries.rs",
    "tests/registry_schema.rs",
    "tests/theme_refactor_compatibility.rs",
    "tests/theme_refactor_mapping.rs",
]

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_json_canonicalizer.workspace = true
semver.workspace = true
sha2.workspace = true
toml.workspace = true
url.workspace = true

[build-dependencies]
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
cssparser = "0.37.0"
flate2 = "1"
jsonschema.workspace = true
tar = "0.4"
tempfile.workspace = true
web_ui_primitives = { git = "https://github.com/triesap/web_ui_primitives", rev = "b9eac0c1f393e43b015c0353930dca96fae2f5c4", features = ["leptos"] }

[lints]
workspace = true
