[package]
name = "luk_homepage_fixture"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"

[dependencies]
leptos = { version = "0.9.0-alpha", features = ["csr"] }
leptos_router = "0.9.0-alpha"
web_ui_primitives = { git = "https://github.com/triesap/web_ui_primitives", rev = "5d866fafd9c44b52ae3f598c8c6d32489a1b3c9f", features = ["leptos"] }
