[package]
name = "luk_homepage_fixture"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"

[dependencies]
leptos = { version = "0.9.0-alpha", features = ["csr"] }
leptos_router = "0.9.0-alpha"
web_ui_primitives = { git = "https://github.com/triesap/web_ui_primitives", rev = "def042b24a9a7e5f447aa1194550d561838b9b7d", features = ["leptos"] }
